@@ -19,3 +19,4 @@
                     ValidationReportProvider() migrated to ValidationReportAdapter()
  8-Oct-2021 - V0.26 Add warning messages for empty read/merge container results in method __mergeContainers()
 12-Oct-2021 - V0.27 Preserve the order of processing for input idCodeLists in RepositoryProvider()
+14-Oct-2021 - V0.28 Extend the path search for model structures in RepositoryProvider()
